list/multi-pick/date/dates are there

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/prop-types": "^15.5.2",
     "@types/react-bootstrap": "^0.31.9",
+    "@types/react-dates": "^16.0.0",
     "@types/react-select": "^1.1.0",
     "autoprefixer": "7.1.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -16,13 +17,16 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "moment": "^2.20.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-bootstrap": "^0.31.5",
+    "react-dates": "^16.0.1",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.2.0",
     "react-select": "^1.1.0",
