--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-dates": "^16.0.0",
     "@types/react-select": "^1.1.0",
     "autoprefixer": "7.1.2",
+    "babel-preset-react-app": "^3.1.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
@@ -33,7 +34,7 @@
     "source-map-loader": "^0.2.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
-    "ts-jest": "^20.0.7",
+    "ts-jest": "20.0.4",
     "ts-loader": "^2.3.7",
     "tslint": "^5.7.0",
     "tslint-loader": "^3.5.3",
@@ -51,10 +52,15 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
-    "@types/jest": "^22.0.0",
+    "@types/enzyme": "^3.1.6",
+    "@types/enzyme-adapter-react-16": "^1.0.1",
+    "@types/jest": "20.0.4",
     "@types/node": "^8.5.2",
     "@types/react": "^16.0.33",
     "@types/react-dom": "^16.0.3",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest-cli": "20.0.4",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6"
   },
