added first wave of drag and drop feature

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/prop-types": "^15.5.2",
     "@types/react-bootstrap": "^0.31.9",
     "@types/react-dates": "^16.0.0",
+    "@types/react-dnd": "^2.0.34",
     "@types/react-select": "^1.1.0",
     "autoprefixer": "7.1.2",
     "babel-preset-react-app": "^3.1.0",
@@ -29,6 +30,8 @@
     "react-bootstrap": "^0.31.5",
     "react-dates": "^16.0.1",
     "react-dev-utils": "^4.0.1",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.2.0",
     "react-select": "^1.1.0",
     "source-map-loader": "^0.2.1",
