--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-dates": "^16.0.0",
     "@types/react-dnd": "^2.0.34",
     "@types/react-select": "^1.1.0",
+    "antd": "^3.1.3",
     "autoprefixer": "7.1.2",
     "babel-preset-react-app": "^3.1.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
