--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/prop-types": "^15.5.2",
     "@types/react-bootstrap": "^0.31.9",
     "@types/react-dnd": "^2.0.34",
+    "@types/throttle-debounce": "^1.0.0",
     "antd": "^3.1.3",
     "autoprefixer": "7.1.2",
     "babel-preset-react-app": "^3.1.0",
@@ -36,6 +37,7 @@
     "source-map-loader": "^0.2.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
+    "throttle-debounce": "^1.0.1",
     "ts-jest": "20.0.4",
     "ts-loader": "^2.3.7",
     "tslint": "^5.7.0",
