--- a/package.json
+++ b/package.json
@@ -3,70 +3,71 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/classnames": "^2.2.3",
-    "@types/prop-types": "^15.5.2",
-    "@types/react-bootstrap": "^0.31.9",
-    "@types/react-dnd": "^2.0.34",
-    "@types/throttle-debounce": "^1.0.0",
     "antd": "^3.1.3",
-    "autoprefixer": "7.1.2",
+    "autoprefixer": "7.1.6",
     "babel-preset-react-app": "^3.1.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
-    "css-loader": "0.28.4",
+    "css-loader": "0.28.7",
     "dotenv": "4.0.0",
-    "extract-text-webpack-plugin": "3.0.0",
+    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.11.2",
+    "fork-ts-checker-webpack-plugin": "^0.2.8",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
     "moment": "^2.20.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.6",
+    "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-bootstrap": "^0.31.5",
-    "react-dev-utils": "^4.0.1",
+    "react-dev-utils": "4.2.1",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.2.0",
     "source-map-loader": "^0.2.1",
-    "style-loader": "0.18.2",
+    "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "throttle-debounce": "^1.0.1",
-    "ts-jest": "20.0.4",
     "ts-loader": "^2.3.7",
     "tslint": "^5.7.0",
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.2.0",
-    "typescript": "~2.5.3",
-    "url-loader": "0.5.9",
-    "webpack": "3.5.1",
-    "webpack-dev-server": "2.7.1",
-    "webpack-manifest-plugin": "1.2.1",
+    "typescript": "^2.6.2",
+    "url-loader": "0.6.2",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
+    "test": "node scripts/test.js",
     "server-start": "node ./server/bin/www"
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
+    "@types/react": "^16.0.34",
+    "@types/react-dom": "^16.0.3",
+    "@types/classnames": "^2.2.3",
+    "@types/prop-types": "^15.5.2",
+    "@types/react-bootstrap": "^0.31.9",
+    "@types/react-dnd": "^2.0.34",
+    "@types/throttle-debounce": "^1.0.0",
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
-    "@types/jest": "20.0.4",
+    "@types/jest": "^22.0.1",
     "@types/node": "^8.5.2",
-    "@types/react": "^16.0.33",
-    "@types/react-dom": "^16.0.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "20.0.4",
     "jest-cli": "20.0.4",
+    "ts-jest": "^20.0.7",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "body-parser": "~1.18.2",
@@ -92,17 +93,18 @@
     "testEnvironment": "node",
     "testURL": "http://localhost",
     "transform": {
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
       "^.+\\.tsx?$": "<rootDir>/config/jest/typescriptTransform.js",
-      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
     "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$"
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|ts|tsx)$"
     ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     },
     "moduleFileExtensions": [
+      "mjs",
       "web.ts",
       "ts",
       "web.tsx",
@@ -116,7 +118,7 @@
     ],
     "globals": {
       "ts-jest": {
-        "tsConfigFile": "C:\\Research\\expr-editor\\tsconfig.test.json"
+        "tsConfigFile": "tsconfig.test.json"
       }
     }
   },
