--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,7 @@
             "type": "node",
             "request": "launch",
             "program": "${workspaceFolder}\\scripts\\test.js",
+            "sourceMaps": true
           }
     ]
 }
