--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.6.2",
-    "react-bootstrap": "^0.31.5",
     "react-dev-utils": "4.2.1",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
@@ -80,8 +79,18 @@
     "serve-favicon": "~2.4.5"
   },
   "jest": {
+    "mapCoverage": true,
+    "collectCoverage": true,
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}"
+      "!**/@types/**",
+      "src/**/*.{js,ts,jsx,tsx}"
+    ],
+    "coverageDirectory": "<rootDir>/test/coverage-jest",
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text",
+      "html"
     ],
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
