--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "20.0.4",
     "jest-cli": "20.0.4",
-    "ts-jest": "^20.0.7",
+    "ts-jest": "22.0.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "body-parser": "~1.18.2",
