--- a/package.json
+++ b/package.json
@@ -54,30 +54,31 @@
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
-    "@types/react": "^16.0.34",
-    "@types/react-dom": "^16.0.3",
     "@types/classnames": "^2.2.3",
-    "@types/prop-types": "^15.5.2",
-    "@types/react-dnd": "^2.0.34",
-    "@types/throttle-debounce": "^1.0.0",
-    "@types/jest": "^22.0.1",
-    "@types/node": "^9.3.0",
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "jest": "20.0.4",
-    "jest-cli": "20.0.4",
-    "ts-jest": "22.0.1",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
+    "@types/jest": "^22.0.1",
+    "@types/node": "^9.3.0",
+    "@types/prop-types": "^15.5.2",
+    "@types/react": "^16.0.34",
+    "@types/react-dnd": "^2.0.34",
+    "@types/react-dom": "^16.0.3",
+    "@types/throttle-debounce": "^1.0.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "express": "~4.15.5",
     "jade": "~1.11.0",
+    "jest": "22.1.4",
+    "jest-cli": "22.1.4",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "serve-favicon": "~2.4.5",
+    "shallow-equal": "^1.0.0",
+    "ts-jest": "22.0.1"
   },
   "jest": {
     "mapCoverage": true,
